test_scripts/errors/closure_type_error.shm
let x = "hello";
let f = fn() { x + 1; };
f();
